--- a/css/style.css
+++ b/css/style.css
@@ -33,24 +33,28 @@ li ul li{
     
 }
 
+/* .secBorder{
+    height: 12px;
+    background-color: black;
+} */
+
 #start{
-    border-bottom: 12px solid black;
+    border-top: 1px solid black;
 
 }
 
 #calories{
     font-weight: bold;
-    border-bottom: 6px solid black;
-    border-top: 0px;
+    border-top: 12px solid black;
 
 }
 
 #nutrientsLimit{
-    border-bottom: 12px solid black;
+    border-top: 6px solid black;
 }
 
 #nutrientsEnough{
-    border-bottom: 3px solid black;
+    border-top: 12px solid black;
 }
 
 /* children in limit */
