--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ li ul li{
 #lstBlank{
     border: 1px solid black;
     list-style: none;
-    width: 300px;
+    width: 18em;
     padding: 10px;
     
 }
